--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         const threadLabels = document.querySelectorAll('.thread-label');
 
         // ESV API Key (replace with your own)
-        const apiKey = 'YOUR_ESV_API_KEY_HERE';
+        const apiKey = 'c3be9ae20e39bd6637c709cd2e94fd42135764d1';
         const apiBase = 'https://api.esv.org/v3/passage/html/';
 
         // Book and chapter data
